关注和取消关注

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -37,8 +37,8 @@
                 <%- include('widgets/user-info', {
                     userInfo: userData.userInfo,
                     isMe: userData.isMe,
-                    <!-- amIFollowed: userData.amIFollowed,
-                    atCount: userData.atCount -->
+                    amIFollowed: userData.amIFollowed,
+                    <!-- atCount: userData.atCount -->
                 });%>
             </div>
 
