--- a/src/views/widgets/user-info.ejs
+++ b/src/views/widgets/user-info.ejs
@@ -13,8 +13,8 @@
 <% } else { %>
     <%# 不是当前登录用户%>
     <p class="margin-top-10">
-        <!-- <button id="btn-un-follow" class="btn btn-light" style="display: none;">取消关注</button>
-        <button id="btn-follow" class="btn btn-primary" style="display: none;">关注</button> -->
+        <button id="btn-un-follow" class="btn btn-light" style="display: none;">取消关注</button>
+        <button id="btn-follow" class="btn btn-primary" style="display: none;">关注</button>
     </p>
 <% } %>
 
