--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-04-10 22:25:43
+ * @LastEditTime: 2020-04-11 15:53:10
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: /koa2-weibo/src/views/index.ejs
+ -->
 <%- include('layout/header', { title: '微博 - 首页', isNav: true, list: true, isInputBlog: true })%>
 
 <div class="container margin-top-20">
@@ -7,13 +15,57 @@
             <!-- 输入框 -->
             <%- include('widgets/input')%>
 
-  
+            
+            <!-- 微博列表 -->
+            <% if (blogData.isEmpty) { %>
+                <div>
+                    <center>暂无数据</center>
+                </div>
+            <% } else { %>
+                <!-- 微博列表 -->
+                <div id="container-weibo-list" class="weibo-list">
+                    <%- include('widgets/blog-list', {
+                        blogList: blogData.blogList,
+                        canReply: true
+                    })%>
+                </div> <!-- 微博列表 结束 -->
+                <!-- 加载更多 -->
+                <% if (blogData.count > blogData.blogList.length) { %>
+                    <%- include('widgets/load-more', {
+                        pageSize: blogData.pageSize,
+                        pageIndex: blogData.pageIndex,
+                        count: blogData.count,
+                        containerSelector: '#container-weibo-list',
+                        api: '/api/blog/loadMore',
+                    })%>
+                <% } %> <!-- 加载更多 结束 -->
+            <% } %>
 
         </div> <!-- 左侧结束 -->
 
         <!-- 右侧 -->
         <div class="col-4">
-         
+          <!-- 个人信息 -->
+          <div class="right-item">
+            <%- include('widgets/user-info', {
+                userInfo: userData.userInfo,
+                isMe: true,
+                amIFollowed: false,
+                <!-- atCount: userData.atCount -->
+            });%>
+        </div>
+
+        <!-- 粉丝 -->
+        <%- include('widgets/fans', {
+            count: userData.fansData.count,
+            userList: userData.fansData.list
+        })%>
+
+        <!-- 关注 -->
+        <%- include('widgets/followers', {
+            count: userData.followersData.count,
+            userList: userData.followersData.list
+        })%>
         </div> <!-- 右侧结束 -->
     </div>
 </div>
