--- a/src/views/atMe.ejs
+++ b/src/views/atMe.ejs
@@ -1,22 +1,24 @@
 <!--
  * @Author: your name
- * @Date: 2020-04-10 22:25:43
- * @LastEditTime: 2020-04-11 22:11:31
- * @LastEditors: Please set LastEditors
+ * @Date: 2020-04-11 22:28:08
+ * @LastEditTime: 2020-04-11 22:28:21
+ * @LastEditors: your name
  * @Description: In User Settings Edit
- * @FilePath: /koa2-weibo/src/views/index.ejs
+ * @FilePath: /koa2-weibo/src/views/atMe.ejs
  -->
-<%- include('layout/header', { title: '微博 - 首页', isNav: true, list: true, isInputBlog: true })%>
+<%- include('layout/header', { title: '微博 - @ 提到我的', isNav: true, list: true, isInputBlog: true  })%>
 
 <div class="container margin-top-20">
     <div class="row">
         <!-- 左侧 -->
         <div class="col-8">
+            <h4 class="padding-bottom-10">
+                @ 提到我的 (<%= atCount%> 未读)
+            </h4>
+
             <!-- 输入框 -->
             <%- include('widgets/input')%>
 
-            
-            <!-- 微博列表 -->
             <% if (blogData.isEmpty) { %>
                 <div>
                     <center>暂无数据</center>
@@ -36,37 +38,12 @@
                         pageIndex: blogData.pageIndex,
                         count: blogData.count,
                         containerSelector: '#container-weibo-list',
-                        api: '/api/blog/loadMore',
+                        api: '/api/atMe/loadMore',
                     })%>
                 <% } %> <!-- 加载更多 结束 -->
             <% } %>
 
         </div> <!-- 左侧结束 -->
-
-        <!-- 右侧 -->
-        <div class="col-4">
-          <!-- 个人信息 -->
-          <div class="right-item">
-            <%- include('widgets/user-info', {
-                userInfo: userData.userInfo,
-                isMe: true,
-                amIFollowed: false,
-                atCount: userData.atCount
-            });%>
-        </div>
-
-        <!-- 粉丝 -->
-        <%- include('widgets/fans', {
-            count: userData.fansData.count,
-            userList: userData.fansData.list
-        })%>
-
-        <!-- 关注 -->
-        <%- include('widgets/followers', {
-            count: userData.followersData.count,
-            userList: userData.followersData.list
-        })%>
-        </div> <!-- 右侧结束 -->
     </div>
 </div>
 
