--- a/src/views/setting.ejs
+++ b/src/views/setting.ejs
@@ -21,7 +21,7 @@
                 <div class="form-group row">
                     <label for="file-picture" class="col-sm-2 col-form-label">头像</label>
                     <div class="col-sm-10">
-                        <img src="<%= 'https://dwz.cn/rnTnftZs'%>" style="width: 100px;" class="margin-bottom-10" id="img-picture"/>
+                        <img src="<%= picture%>" style="width: 100px;" class="margin-bottom-10" id="img-picture"/>
                         <input type="file" class="form-control-file" accept="image/*" id="file-picture">
                     </div>
                 </div>
