--- a/src/views/widgets/followers.ejs
+++ b/src/views/widgets/followers.ejs
@@ -1,15 +1,7 @@
-<!--
- * @Author: your name
- * @Date: 2020-04-11 11:06:07
- * @LastEditTime: 2020-04-11 11:06:15
- * @LastEditors: your name
- * @Description: In User Settings Edit
- * @FilePath: /koa2-weibo/src/views/widgets/followers.ejs
- -->
 <div class="user-list right-item">
     <p class="title bold">
         <i class="fa fa-users"></i>
-        å…³æ³¨ï¼ˆ<%= count%>ï¼‰
+        关注（<%= count%>）
     </p>
     <div class="user-list clear-fix">
         <% userList.forEach(user => { %>
