--- a/src/views/layout/header.ejs
+++ b/src/views/layout/header.ejs
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2019-09-14 15:57:12
+ * @LastEditTime: 2020-04-18 16:14:35
+ * @LastEditors: Please set LastEditors
+ * @Description: In User Settings Edit
+ * @FilePath: /koa2-weibo/src/views/layout/header.ejs
+ -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -48,7 +56,7 @@
     <% if (locals.isNav) { %>
     <%# 有导航%>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">慕课微博</a>
+        <a class="navbar-brand" href="/">blue微博</a>
         <ul class="navbar-nav mr-auto" style="flex-direction: row;">
             <li class="nav-item">
                 <a class="nav-link" href="/">
@@ -59,7 +67,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/profile">
                     <i class="fa fa-user"></i>
-                    我的空间
+                    我的微博
                 </a>
             </li>
             <li class="nav-item">
@@ -71,7 +79,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/setting">
                     <i class="fa fa-gear"></i>
-                    设置
+                    个人设置
                 </a>
             </li>
         </ul>
